# docpipe

./: .gitignore  LICENSE  README.md  cli.py  convert.py  pyproject.toml  summarize.py
