[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "docpipe"
version = "0.1.0"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "docling",
    "openai",
]

[project.scripts]
docpipe = "cli:main"

[tool.setuptools]
py-modules = ["cli", "convert", "summarize"]
